added twitter and changed email :-)

--- a/my-layout2/page.html
+++ b/my-layout2/page.html
@@ -74,7 +74,7 @@
 
 				<div>
 					<i class="fa fa-envelope"></i>
-					<p><a href="mailto:afonseca@qf.org.qa">Alexander :-)</a></p>
+					<p><a href="mailto:gsiganos@qf.org.qa">Georgos</a></p>
 				</div>
 
 			</div>
@@ -89,7 +89,7 @@
 				<div class="footer-icons">
 
 					<!-- <a href="#"><i class="fa fa-facebook"></i></a> -->
-					<a href="#"><i class="fa fa-twitter"></i></a>
+					<a href="https://twitter.com/arabesque_io"><i class="fa fa-twitter"></i></a>
 					<!-- <a href="#"><i class="fa fa-linkedin"></i></a> -->
 					<a href="https://github.com/Qatar-Computing-Research-Institute/Arabesque"><i class="fa fa-github"></i></a>
 
