Fixes to website

--- a/my-layout2/page.html
+++ b/my-layout2/page.html
@@ -57,7 +57,7 @@
 			<div class="footer-left">
 
 				<h3><span>Arabesque</span></h3>
-				<p class="footer-company-name">Arabesque.io &copy; 2015</p>
+				<p class="footer-company-name">Arabesque &copy; 2015</p>
 			</div>
 
 			<div class="footer-center">
@@ -82,8 +82,8 @@
 			<div class="footer-right">
 
 				<p class="footer-company-about">
-					<span>About Arabesque.io</span>
-					Arabesque.io is an open source project of Qatar Computing Research Institute, HBKU.
+					<span>About Arabesque</span>
+					Arabesque is an open source project of Qatar Computing Research Institute, HBKU.
 				</p>
 
 				<div class="footer-icons">
