Fixes to user guide and logo alignment under Chrome.

--- a/my-layout2/page.html
+++ b/my-layout2/page.html
@@ -26,9 +26,14 @@
 	<body>
 		<header class="header-basic">
 
-			<div class="header-limiter">
+			<div class="header-limiter clearfix">
 
-				<h1><a href="index.html"><img src="assets/img/arabesque-logo-small.png" alt=""> Arabesque</a></h1>
+				<h1>
+					<a href="index.html">
+						<img src="assets/img/arabesque-logo-small.png" alt="">
+						<span>Arabesque</span>
+					</a>
+				</h1>
 
 				<nav>
 					<a href="index.html">Home</a>
@@ -37,7 +42,6 @@
 					<a href="about.html">About</a>
 				</nav>
 			</div>
-
 		</header>
 
 		<!-- The content of your page would go here. -->
@@ -83,7 +87,7 @@
 
 				<p class="footer-company-about">
 					<span>About Arabesque</span>
-					Arabesque is an open source project of Qatar Computing Research Institute, HBKU.
+					Arabesque is an open source project of <a href="http://qcri.org.qa">Qatar Computing Research Institute, HBKU</a>.
 				</p>
 
 				<div class="footer-icons">
