finished a pass on the user guide

--- a/my-layout2/page.html
+++ b/my-layout2/page.html
@@ -37,7 +37,8 @@
 
 				<nav>
 					<a href="index.html">Home</a>
-					<a href="user_guide.html">User Guide</a> <!-- class="selected" -->
+					<a href="user_guide.html">Programming Guide</a> <!-- class="selected" -->
+					<a href="how_run.html">How to Run</a> <!-- class="selected" -->
 					<a href="download.html">Download</a>
 					<a href="about.html">About</a>
 				</nav>
