fixing keywords to reflect the website

--- a/my-layout2/page.html
+++ b/my-layout2/page.html
@@ -6,8 +6,8 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="keywords" content="footer, address, phone, icons" />
-
+	<meta name="keywords" content="Frequent subgraph mining, Motifs, Cliques, Graph Mining, Distributed Graph Mining, Hadoop, Giraph" />
+	<meta name="description" content="Open source distributed graph mining system that enables quick and easy development of graph mining algorithms, while providing a scalable and efficient implementation that runs on top of Hadoop."
 	<title>{{title}}</title>
 
 	<link rel="stylesheet" href="assets/css/demo.css">
