changing email and removing phone

--- a/my-layout2/page.html
+++ b/my-layout2/page.html
@@ -73,13 +73,8 @@
 				</div>
 
 				<div>
-					<i class="fa fa-phone"></i>
-					<p>+974 5528 3942</p>
-				</div>
-
-				<div>
 					<i class="fa fa-envelope"></i>
-					<p><a href="mailto:gsiganos@qf.org.qa">Georgos</a></p>
+					<p><a href="mailto:info.arabesque.io@gmail.com">Info</a></p>
 				</div>
 
 			</div>
