updates based on Ashraf's feedback

--- a/my-layout2/page.html
+++ b/my-layout2/page.html
@@ -69,7 +69,7 @@
 
 				<div>
 					<i class="fa fa-map-marker"></i>
-					<p><span>Tornado Tower</span> Doha, Qatar</p>
+					<p><span>HBKU Research Complex</span> Doha, Qatar</p>
 				</div>
 
 				<div>
